siduxcc (0.99.2) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 16 Sep 2009 19:51:34 +0200

siduxcc (0.99.1) unstable; urgency=low

  * kde4: system services module added

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 14 Sep 2009 21:44:57 +0200

siduxcc (0.14.3) unstable; urgency=low

  * make siduxcc replace siduxcc-common (<< 0.14.2).

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 07 Aug 2009 15:40:23 +0200

siduxcc (0.14.2) unstable; urgency=low

  * remove broken replaces.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 07 Aug 2009 14:06:00 +0200

siduxcc (0.14.1) unstable; urgency=low

  * fix build dependencies.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 07 Aug 2009 14:00:54 +0200

siduxcc (0.14.0) unstable; urgency=low

  * a first version of siduxcc kde4 added

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 06 Aug 2009 17:05:06 +0200

siduxcc (0.13.5) unstable; urgency=low

  * remove last traces of smxi.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 11 Jul 2009 16:50:28 +0200

siduxcc (0.13.4) unstable; urgency=low

  * don't suggest install-meta anymore, it's gone.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 11 Jul 2009 14:04:22 +0200

siduxcc (0.13.3) unstable; urgency=low

  * add missing graphics.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 03 Jul 2009 00:14:12 +0200

siduxcc (0.13.2) unstable; urgency=low

  [ Bernard Gray ]
  * update art for 2009-02
  * convert all bitmaps to new svg art
  * update copyright for new art 

  [ Stefan Lippers-Hollmann ]
  * generate binary artwork.
  * wrap control entries.
  * bump standards version to 3.8.2.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Jul 2009 23:47:38 +0200

siduxcc (0.13.1) unstable; urgency=low

  * fix desktop-entry-contains-encoding-key.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 20 Feb 2009 17:52:59 +0100

siduxcc (0.13.0) unstable; urgency=low

  * drop the kde3 of hermes, it will break in kde4.