@@ -1,8 +1,12 @@
 siduxcc (0.99.2) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 16 Sep 2009 19:51:34 +0200
+  [ Fabian Wuertz ]
+  * install.siduxcc-kde4 updated
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 17 Sep 2009 12:30:21 +0200
 
 siduxcc (0.99.1) unstable; urgency=low
 
